plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.backend'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
		implementation 'org.springframework.boot:spring-boot-starter-actuator'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-mail'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
		implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
		runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
		runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
		compileOnly 'org.projectlombok:lombok'
		runtimeOnly 'org.postgresql:postgresql'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'org.springframework.security:spring-security-test'
	//specificaion 테스트


	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		testImplementation platform('org.junit:junit-bom:5.10.0')
		testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation "org.testcontainers:postgresql:1.21.0"
	testImplementation "org.testcontainers:testcontainers:1.20.5" // testcontainers
	testImplementation 'org.testcontainers:postgresql:1.20.5' // PostgreSQL 모듈
	testImplementation "org.testcontainers:junit-jupiter:1.20.5" // JUnit 5 연동
		testImplementation 'org.testcontainers:postgresql'
		implementation 'org.apache.poi:poi:5.2.3'
		implementation 'org.apache.poi:poi-ooxml:5.2.3'
		implementation platform('software.amazon.awssdk:bom:2.27.21')
		implementation 'software.amazon.awssdk:s3'
		implementation 'software.amazon.awssdk:auth'
		implementation 'software.amazon.awssdk:regions'
}

tasks.named('test') {
	useJUnitPlatform()
}
